# book-link

backend/: check_routes.py  check_schema.py  fix_db.py  openapi_dump.json  pyproject.toml  test_api.py  test_api_urllib.py  verify_db.py
backend/server/: auth.py  database.py  main.py  models.py  schemas.py
backend/server/apis/: books.py  user.py
frontend/src/components/: AuthModal.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AboutUs.jsx  CreatePost.jsx  Explore.jsx  Home.jsx  Login.jsx  Navbar.css  Profile.jsx  Signup.jsx
frontend/src/styles/: AboutUs.css  App.css  AuthModal.css  CreatePost.css  Home.css  Login.css  Navbar.css  Profile.css  ProtectedRoute.css  Signup.css  explore.css
